Working on Pandas

--- a/cheatsheet.ipynb
+++ b/cheatsheet.ipynb
@@ -763,6 +763,490 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Reading a CSV\n",
+    "\n",
+    "# If we had a local file, i.e. citibike.csv, we could just simple use pd.read_csv('citibike.csv')\n",
+    "# Instead we can get it directly from the internet\n",
+    "\n",
+    "import pandas as pd\n",
+    "from zipfile import ZipFile\n",
+    "from StringIO import StringIO\n",
+    "import urllib2\n",
+    "\n",
+    "# Create a function to pull citibike data from the web directly into memory for a given month.\n",
+    "# month can be any of the following: ['01', '02', '03', '04', '05', '06']\n",
+    "def getCitibikeData(month):\n",
+    "    # Create the URL to the citibike zip file\n",
+    "    url = \"https://s3.amazonaws.com/tripdata/2015%s-citibike-tripdata.zip\" % month\n",
+    "\n",
+    "    # Download the file into 'r'\n",
+    "    r = urllib2.urlopen(url).read()\n",
+    "\n",
+    "    # Open the zip into 'f'\n",
+    "    f = ZipFile(StringIO(r))\n",
+    "\n",
+    "    # Open the csv inside the zip\n",
+    "    csv = f.open(\"2015%s-citibike-tripdata.csv\" % month)\n",
+    "\n",
+    "    # Finally, return the dataframe\n",
+    "    return pd.read_csv(csv)\n",
+    "\n",
+    "# Get a dataframe with data from january 2015\n",
+    "data = getCitibikeData('01')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([u'tripduration', u'starttime', u'stoptime', u'start station id',\n",
+      "       u'start station name', u'start station latitude',\n",
+      "       u'start station longitude', u'end station id', u'end station name',\n",
+      "       u'end station latitude', u'end station longitude', u'bikeid',\n",
+      "       u'usertype', u'birth year', u'gender'],\n",
+      "      dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tripduration</th>\n",
+       "      <th>start station id</th>\n",
+       "      <th>start station latitude</th>\n",
+       "      <th>start station longitude</th>\n",
+       "      <th>end station id</th>\n",
+       "      <th>end station latitude</th>\n",
+       "      <th>end station longitude</th>\n",
+       "      <th>bikeid</th>\n",
+       "      <th>birth year</th>\n",
+       "      <th>gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>285552.000000</td>\n",
+       "      <td>285552.000000</td>\n",
+       "      <td>285552.000000</td>\n",
+       "      <td>285552.000000</td>\n",
+       "      <td>285552.000000</td>\n",
+       "      <td>285552.000000</td>\n",
+       "      <td>285552.000000</td>\n",
+       "      <td>285552.000000</td>\n",
+       "      <td>279924.000000</td>\n",
+       "      <td>285552.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>654.325583</td>\n",
+       "      <td>443.535006</td>\n",
+       "      <td>40.735804</td>\n",
+       "      <td>-73.990177</td>\n",
+       "      <td>440.337557</td>\n",
+       "      <td>40.735607</td>\n",
+       "      <td>-73.990398</td>\n",
+       "      <td>18147.291481</td>\n",
+       "      <td>1974.951419</td>\n",
+       "      <td>1.162485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>900.775928</td>\n",
+       "      <td>332.580265</td>\n",
+       "      <td>0.018773</td>\n",
+       "      <td>0.011681</td>\n",
+       "      <td>326.010259</td>\n",
+       "      <td>0.018718</td>\n",
+       "      <td>0.011742</td>\n",
+       "      <td>2065.313794</td>\n",
+       "      <td>11.574637</td>\n",
+       "      <td>0.419490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>72.000000</td>\n",
+       "      <td>40.680342</td>\n",
+       "      <td>-74.017134</td>\n",
+       "      <td>72.000000</td>\n",
+       "      <td>40.680342</td>\n",
+       "      <td>-74.017134</td>\n",
+       "      <td>14529.000000</td>\n",
+       "      <td>1899.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>334.000000</td>\n",
+       "      <td>308.000000</td>\n",
+       "      <td>40.723627</td>\n",
+       "      <td>-73.998102</td>\n",
+       "      <td>307.000000</td>\n",
+       "      <td>40.723180</td>\n",
+       "      <td>-73.998522</td>\n",
+       "      <td>16355.000000</td>\n",
+       "      <td>1967.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>504.000000</td>\n",
+       "      <td>417.000000</td>\n",
+       "      <td>40.738274</td>\n",
+       "      <td>-73.990093</td>\n",
+       "      <td>417.000000</td>\n",
+       "      <td>40.737815</td>\n",
+       "      <td>-73.990617</td>\n",
+       "      <td>18148.000000</td>\n",
+       "      <td>1977.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>772.000000</td>\n",
+       "      <td>492.000000</td>\n",
+       "      <td>40.750450</td>\n",
+       "      <td>-73.981854</td>\n",
+       "      <td>492.000000</td>\n",
+       "      <td>40.750200</td>\n",
+       "      <td>-73.981854</td>\n",
+       "      <td>19903.000000</td>\n",
+       "      <td>1984.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>43023.000000</td>\n",
+       "      <td>3002.000000</td>\n",
+       "      <td>40.771522</td>\n",
+       "      <td>-73.950048</td>\n",
+       "      <td>3002.000000</td>\n",
+       "      <td>40.771522</td>\n",
+       "      <td>-73.950048</td>\n",
+       "      <td>21690.000000</td>\n",
+       "      <td>1999.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        tripduration  start station id  start station latitude  \\\n",
+       "count  285552.000000     285552.000000           285552.000000   \n",
+       "mean      654.325583        443.535006               40.735804   \n",
+       "std       900.775928        332.580265                0.018773   \n",
+       "min        60.000000         72.000000               40.680342   \n",
+       "25%       334.000000        308.000000               40.723627   \n",
+       "50%       504.000000        417.000000               40.738274   \n",
+       "75%       772.000000        492.000000               40.750450   \n",
+       "max     43023.000000       3002.000000               40.771522   \n",
+       "\n",
+       "       start station longitude  end station id  end station latitude  \\\n",
+       "count            285552.000000   285552.000000         285552.000000   \n",
+       "mean                -73.990177      440.337557             40.735607   \n",
+       "std                   0.011681      326.010259              0.018718   \n",
+       "min                 -74.017134       72.000000             40.680342   \n",
+       "25%                 -73.998102      307.000000             40.723180   \n",
+       "50%                 -73.990093      417.000000             40.737815   \n",
+       "75%                 -73.981854      492.000000             40.750200   \n",
+       "max                 -73.950048     3002.000000             40.771522   \n",
+       "\n",
+       "       end station longitude         bikeid     birth year         gender  \n",
+       "count          285552.000000  285552.000000  279924.000000  285552.000000  \n",
+       "mean              -73.990398   18147.291481    1974.951419       1.162485  \n",
+       "std                 0.011742    2065.313794      11.574637       0.419490  \n",
+       "min               -74.017134   14529.000000    1899.000000       0.000000  \n",
+       "25%               -73.998522   16355.000000    1967.000000       1.000000  \n",
+       "50%               -73.990617   18148.000000    1977.000000       1.000000  \n",
+       "75%               -73.981854   19903.000000    1984.000000       1.000000  \n",
+       "max               -73.950048   21690.000000    1999.000000       2.000000  "
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Take a look at the data\n",
+    "\n",
+    "# Print a list of columns\n",
+    "print data.columns\n",
+    "\n",
+    "# Print stats for the numeric columns\n",
+    "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    1346\n",
+      "1     363\n",
+      "2     346\n",
+      "3     182\n",
+      "4     969\n",
+      "Name: tripduration, dtype: int64\n",
+      "0    1346\n",
+      "1     363\n",
+      "2     346\n",
+      "3     182\n",
+      "4     969\n",
+      "Name: tripduration, dtype: int64\n",
+      "0    455\n",
+      "1    434\n",
+      "2    491\n",
+      "3    384\n",
+      "4    474\n",
+      "Name: start station id, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get a single column\n",
+    "\n",
+    "# Access either with dictionary syntax\n",
+    "print data['tripduration'].head()\n",
+    "\n",
+    "# Or with attribute syntax\n",
+    "print data.tripduration.head()\n",
+    "\n",
+    "# This won't work with fields that have spaces in their names, i.e. 'start station id'\n",
+    "print data['start station id'].head()\n",
+    "\n",
+    "# .head() just gets the first few entries in a numpy array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    455\n",
+      "1    434\n",
+      "2    491\n",
+      "3    384\n",
+      "4    474\n",
+      "Name: start_station_id, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We could rename those columns if we wanted to remove weird characters such as spaces\n",
+    "# Pass a dictionary with current : replace\n",
+    "# So we just want to replace spaces with underscores here\n",
+    "columns = {\n",
+    "    'start station id': 'start_station_id',\n",
+    "    'end station id': 'end_station_id'\n",
+    "}\n",
+    "\n",
+    "# data.rename returns a new copy of data so assign it back to data to save the change.\n",
+    "data = data.rename(columns=columns)\n",
+    "\n",
+    "# Now we can access data.start_station_id\n",
+    "print data.start_station_id.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    55\n",
+      "1    52\n",
+      "2    41\n",
+      "3    46\n",
+      "4    38\n",
+      "Name: age, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can create new columns in the dataframe with derived data, for example age.\n",
+    "data['age'] = 2015 - data['birth year']\n",
+    "\n",
+    "print data['age'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     True\n",
+      "1     True\n",
+      "2    False\n",
+      "3     True\n",
+      "4    False\n",
+      "Name: age, dtype: bool\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can filter the data if we only want a subset.\n",
+    "# The first step is creating a \"mask\" array.  A mask array is an array of boolean values, True and False.\n",
+    "# Wherever there is a True we want to get the value and False we don't.\n",
+    "\n",
+    "# For example, creating a mask for age > 45\n",
+    "# Compare the output to the above cell.\n",
+    "mask = (data['age'] > 45)\n",
+    "print mask.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    tripduration      starttime       stoptime  start_station_id  \\\n",
+      "0           1346  1/1/2015 0:01  1/1/2015 0:24               455   \n",
+      "1            363  1/1/2015 0:02  1/1/2015 0:08               434   \n",
+      "3            182  1/1/2015 0:04  1/1/2015 0:07               384   \n",
+      "5            496  1/1/2015 0:07  1/1/2015 0:15               512   \n",
+      "16           614  1/1/2015 0:14  1/1/2015 0:24               285   \n",
+      "\n",
+      "         start station name  start station latitude  start station longitude  \\\n",
+      "0           1 Ave & E 44 St               40.750020               -73.969053   \n",
+      "1           9 Ave & W 18 St               40.743174               -74.003664   \n",
+      "3   Fulton St & Waverly Ave               40.683178               -73.965964   \n",
+      "5           W 29 St & 9 Ave               40.750073               -73.998393   \n",
+      "16       Broadway & E 14 St               40.734546               -73.990741   \n",
+      "\n",
+      "    end_station_id             end station name  end station latitude  \\\n",
+      "0              265     Stanton St & Chrystie St             40.722293   \n",
+      "1              482              W 15 St & 7 Ave             40.739355   \n",
+      "3              399  Lafayette Ave & St James Pl             40.688515   \n",
+      "5              383   Greenwich Ave & Charles St             40.735238   \n",
+      "16             312      Allen St & E Houston St             40.722055   \n",
+      "\n",
+      "    end station longitude  bikeid    usertype  birth year  gender  age  \n",
+      "0              -73.991475   18660  Subscriber        1960       2   55  \n",
+      "1              -73.999318   16085  Subscriber        1963       1   52  \n",
+      "3              -73.964763   19610  Subscriber        1969       1   46  \n",
+      "5              -74.000271   20788  Subscriber        1969       2   46  \n",
+      "16             -73.989111   19202  Subscriber        1959       1   56  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Then the mask can be applied to the dataframe to get those rows which correspond to the True values.\n",
+    "print data[mask].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    False\n",
+      "1     True\n",
+      "2    False\n",
+      "3     True\n",
+      "4    False\n",
+      "dtype: bool\n",
+      "    tripduration      starttime       stoptime  start_station_id  \\\n",
+      "1            363  1/1/2015 0:02  1/1/2015 0:08               434   \n",
+      "3            182  1/1/2015 0:04  1/1/2015 0:07               384   \n",
+      "16           614  1/1/2015 0:14  1/1/2015 0:24               285   \n",
+      "21           307  1/1/2015 0:18  1/1/2015 0:23               474   \n",
+      "25           797  1/1/2015 0:21  1/1/2015 0:35               513   \n",
+      "\n",
+      "         start station name  start station latitude  start station longitude  \\\n",
+      "1           9 Ave & W 18 St               40.743174               -74.003664   \n",
+      "3   Fulton St & Waverly Ave               40.683178               -73.965964   \n",
+      "16       Broadway & E 14 St               40.734546               -73.990741   \n",
+      "21          5 Ave & E 29 St               40.745168               -73.986831   \n",
+      "25         W 56 St & 10 Ave               40.768254               -73.988639   \n",
+      "\n",
+      "    end_station_id             end station name  end station latitude  \\\n",
+      "1              482              W 15 St & 7 Ave             40.739355   \n",
+      "3              399  Lafayette Ave & St James Pl             40.688515   \n",
+      "16             312      Allen St & E Houston St             40.722055   \n",
+      "21             476              E 31 St & 3 Ave             40.743943   \n",
+      "25             488              W 39 St & 9 Ave             40.756458   \n",
+      "\n",
+      "    end station longitude  bikeid    usertype  birth year  gender  age  \n",
+      "1              -73.999318   16085  Subscriber        1963       1   52  \n",
+      "3              -73.964763   19610  Subscriber        1969       1   46  \n",
+      "16             -73.989111   19202  Subscriber        1959       1   56  \n",
+      "21             -73.979661   18834  Subscriber        1962       1   53  \n",
+      "25             -73.993722   16761  Subscriber        1969       1   46  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Multiple filters can be combined with and (&), or (|), etc.\n",
+    "# Create a mask where the age is greater than 45 and the gender is 1\n",
+    "mask = (data['age'] > 45) & (data['gender'] == 1)\n",
+    "print mask.head()\n",
+    "print data[mask].head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
