--- a/machine_learning/cheatsheet.ipynb
+++ b/machine_learning/cheatsheet.ipynb
@@ -333,6 +333,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Support Vector Machines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy in training set: 1.0\n",
+      "Accuracy in training set: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import svm\n",
+    "\n",
+    "data_train, data_test, target_train, target_test = train_test_split(\n",
+    "    data_subset, target_subset, test_size=0.33, random_state=1\n",
+    ")\n",
+    "\n",
+    "# Linear Kernel\n",
+    "clf = svm.SVC(kernel='linear')\n",
+    "clf.fit(data_train, target_train)\n",
+    "\n",
+    "y_pred = clf.predict(data_train)\n",
+    "print \"Accuracy in training set:\", 1.*sum(y_pred == target_train)/len(target_train)\n",
+    "\n",
+    "y_pred = clf.predict(data_test)\n",
+    "print \"Accuracy in training set:\", 1.*sum(y_pred == target_test)/len(target_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy in training set: 0.692946058091\n",
+      "Accuracy in training set: 0.638655462185\n"
+     ]
+    }
+   ],
+   "source": [
+    "# That worked pretty well.  Let's try it on a subset of the pixels.\n",
+    "\n",
+    "# Use only the first n pixels of each digit.\n",
+    "n = 10\n",
+    "\n",
+    "clf = svm.SVC(kernel='linear')\n",
+    "clf.fit(data_train[:,:n], target_train)\n",
+    "\n",
+    "y_pred = clf.predict(data_train[:,:n])\n",
+    "print \"Accuracy in training set:\", 1.*sum(y_pred == target_train)/len(target_train)\n",
+    "\n",
+    "y_pred = clf.predict(data_test[:,:n])\n",
+    "print \"Accuracy in training set:\", 1.*sum(y_pred == target_test)/len(target_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy in training set: 0.829875518672\n",
+      "Accuracy in training set: 0.72268907563\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now Try poly kernel with default settings to see if we can improve.\n",
+    "\n",
+    "# Use only the first n pixels of each digit.\n",
+    "n = 10\n",
+    "\n",
+    "clf = svm.SVC(kernel='poly')\n",
+    "clf.fit(data_train[:,:n], target_train)\n",
+    "\n",
+    "y_pred = clf.predict(data_train[:,:n])\n",
+    "print \"Accuracy in training set:\", 1.*sum(y_pred == target_train)/len(target_train)\n",
+    "\n",
+    "y_pred = clf.predict(data_test[:,:n])\n",
+    "print \"Accuracy in training set:\", 1.*sum(y_pred == target_test)/len(target_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Neural Networks"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
