--- a/scikitlearn/classification.ipynb
+++ b/scikitlearn/classification.ipynb
@@ -1,39 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Display plots in the notebook\n",
-    "%pylab inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pylab as pl\n",
-    "pl.style.use('fivethirtyeight')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -75,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +65,7 @@
        "         0.,   0.,   0.,   6.,  13.,  10.,   0.,   0.,   0.])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -145,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -183,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -218,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -253,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -286,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -329,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -361,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -391,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -401,7 +368,7 @@
      "output_type": "stream",
      "text": [
       "Training Accuracy: 1.0\n",
-      "Testing Accuracy: 0.835555555556\n"
+      "Testing Accuracy: 0.851111111111\n"
      ]
     }
    ],
@@ -421,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -430,8 +397,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Accuracy: 0.901262063846\n",
-      "Testing Accuracy: 0.8\n"
+      "Training Accuracy: 0.881217520416\n",
+      "Testing Accuracy: 0.724444444444\n"
      ]
     }
    ],
@@ -450,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -459,8 +426,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Accuracy: 0.997772828508\n",
-      "Testing Accuracy: 0.951111111111\n"
+      "Training Accuracy: 1.0\n",
+      "Testing Accuracy: 0.928888888889\n"
      ]
     }
    ],
@@ -480,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
