--- a/matplotlib/matplotlib.ipynb
+++ b/matplotlib/matplotlib.ipynb
@@ -803,7 +803,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The different styles don't always play nicely with each other, so it's recommended to pick a style at the begining of the program/notebook and stick with it.\n",
+    "The different styles don't always play nicely with each other, so it's recommended to pick a style at the beginning of the program/notebook and stick with it.\n",
     "\n",
     "You can also [write your own stylesheets](http://matplotlib.org/users/style_sheets.html)."
    ]
