add plot incorrect and test jupyter, update reqs

--- a/keras/MNIST_Classification_1.ipynb
+++ b/keras/MNIST_Classification_1.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
     "id": "UZYU7Evaj8T7"
    },
    "outputs": [],
@@ -16,26 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
-    "id": "C7uixISwj8UJ",
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "!pip install -q tensorflow==2.0.0-beta1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
     "id": "JTiky_vuj8UT",
     "scrolled": true
    },
@@ -49,16 +32,17 @@
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('fivethirtyeight')\n",
     "\n",
+    "import numpy as np\n",
+    "\n",
     "from IPython.display import display, HTML"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
     "id": "5YiKixjAj8Uc"
    },
    "outputs": [],
@@ -71,44 +55,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
-    "id": "JzK_FDbI0kl3"
-   },
-   "outputs": [],
-   "source": [
-    "y_train = to_categorical(y_train)\n",
-    "y_test = to_categorical(y_test)\n",
-    "\n",
-    "x_train = x_train / 255\n",
-    "y_train = y_train / 255"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "INEZq9WDsvq0"
-   },
-   "outputs": [],
-   "source": [
-    "for row in x_train[1]:\n",
-    "  display(HTML(' '.join('<b style=\"color:red;opacity:{0:.2f}\">{0:.1f}</b>'.format(.5+i,i) if i > 0 else '0.0' for i in row)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
     "id": "eu73asLxj8Ur"
    },
    "outputs": [],
@@ -123,6 +73,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "JzK_FDbI0kl3"
+   },
+   "outputs": [],
+   "source": [
+    "y_train = to_categorical(y_train)\n",
+    "#y_test = to_categorical(y_test)\n",
+    "\n",
+    "x_train = x_train / 255\n",
+    "y_train = y_train / 255"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "INEZq9WDsvq0"
+   },
+   "outputs": [],
+   "source": [
+    "for row in x_train[1]:\n",
+    "  display(HTML(' '.join('<b style=\"color:red;opacity:{0:.2f}\">{0:.1f}</b>'.format(.5+i,i) if i > 0 else '0.0' for i in row)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -134,11 +115,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
     "id": "QOMTGDMBj8VC"
    },
    "outputs": [],
@@ -155,11 +135,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
     "id": "xCBoG8-pj8VM",
     "scrolled": true
    },
@@ -170,11 +149,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
     "id": "6fyBBimaj8VW"
    },
    "outputs": [],
@@ -191,6 +169,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_incorrect(model):\n",
+    "    predictions = model.predict_classes(x_test[:500])\n",
+    "    incorrect = np.argwhere(predictions != y_test[:500]).flatten()\n",
+    "\n",
+    "    fig, axs = plt.subplots(figsize=(10,8), ncols=5, nrows=4)\n",
+    "    for r, row in enumerate(axs):\n",
+    "        for c, ax in enumerate(row):\n",
+    "            i = c + r*5\n",
+    "            if i < len(incorrect):\n",
+    "                ax.imshow(x_test[incorrect[c+r*5]], cmap=plt.cm.gray)\n",
+    "                ax.set_axis_off()\n",
+    "                #if r == 0:\n",
+    "                ax.set_title(predictions[incorrect[c+r*5]])\n",
+    "            \n",
+    "plot_incorrect(model)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -202,11 +203,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
     "id": "I7b-PZPnj8Vg"
    },
    "outputs": [],
@@ -224,11 +224,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
     "id": "gAMw6E3zj8Vp"
    },
    "outputs": [],
@@ -238,17 +237,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
     "id": "95wh1Z2_j8Vz"
    },
    "outputs": [],
    "source": [
     "plot_accuracy(history)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_incorrect(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -273,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
